# praktik_rekayasa_fitur

./: README.md  fitur_histogram.csv  fitur_hog.csv  main.ipynb  pyproject.toml
